--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         },
         {
             "name": "Thomas Roche",
-            "email": "touristtam@gmail.com",
+            "email": "touristtam@gmail.com"
         }
     ],
     "autoload": {
