--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         }
     ],
     "require": {
+        "symfony/symfony": ">=2.1",
         "stof/doctrine-extensions-bundle": "dev-master"
     },
     "autoload": {
