--- a/Tests/autoload.php.dist
+++ b/Tests/autoload.php.dist
@@ -2,10 +2,13 @@
 
 $loader = include_once __DIR__ . '/../vendor/autoload.php';
 
-spl_autoload_register(function($class) {
-    if (0 === strpos($class, 'Fp\\OpenIdBundle\\')) {
-        $path = __DIR__.'/../'.implode('/', array_slice(explode('\\', $class), 2)).'.php';
-        if (!stream_resolve_include_path($path)) {
+spl_autoload_register( function( $class )
+{
+    if ( 0 === strpos( $class, 'WG\\AuditBundle\\' ))
+    {
+        $path = __DIR__ . '/../' . implode('/', array_slice( explode( '\\', $class ), 2 )) . '.php';
+        if ( !stream_resolve_include_path( $path ))
+        {
             return false;
         }
         require_once $path;
