modified css; reflected on templates

--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -78,5 +78,9 @@ wgauditformfields:
     pattern:  /fields
     defaults: {_controller: WGAuditBundle:AuditFormField:index}
 
+wgauditformfield_calculate_score:
+    pattern:  /fields/{id}/calculate-score
+    defaults: {_controller: WGAuditBundle:AuditFormField:calculateScore}
+
 
     
