--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,7 @@
     "authors": [
         {
             "name": "Moritz Kraft",
-            "email": "mo@writtengames.com",
-            "homepage": "www.writtengames.com"
+            "email": "mo@writtengames.com"
         },
         {
             "name": "Thomas Roche",
