adding modal boxes (test) to view Section from Form and view Field from Section + added dropdown button for View/Edit/Delete options on editable forms

--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -90,5 +90,9 @@ wgauditformfield_calculate_score:
     pattern:  /fields/{id}/calculate-score
     defaults: {_controller: WGAuditBundle:AuditFormField:calculateScore}
 
+# temp
+wgaudit_iconset:
+    pattern: /iconset
+    defaults: {_controller: WGAuditBundle:Audit:showIconSet}
 
 
