--- a/Resources/config/routing/sections.yml
+++ b/Resources/config/routing/sections.yml
@@ -26,7 +26,7 @@ wgauditformsection_remove:
     defaults: { _controller: WGAuditBundle:AuditFormSection:remove }
     requirements:
         _method:  POST|GET
-        _format: json
+        _format: JSON
         id: \d+
         field_id: \d+
 
