--- a/Tests/autoload.php.dist
+++ b/Tests/autoload.php.dist
@@ -4,7 +4,7 @@ $loader = include_once __DIR__ . '/../vendor/autoload.php';
 
 spl_autoload_register( function( $class )
 {
-    if ( 0 === strpos( $class, 'WG\\AuditBundle\\' ))
+    if ( 0 === strpos( $class, 'CiscoSystems\\AuditBundle\\' ))
     {
         $path = __DIR__ . '/../' . implode('/', array_slice( explode( '\\', $class ), 2 )) . '.php';
         if ( !stream_resolve_include_path( $path ))
